--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,29 +6,21 @@ on:
       - master
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-          registry-url: https://registry.npmjs.org/
-
-      - name: Clear npm cache
-        run: npm ci
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Publish to npm
-        run: npm publish --provenance --access public
+          registry-url: "https://registry.npmjs.org"
+      - run: npm ci
+      - run: npm install
+      - run: npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
