--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: "20.x"
           registry-url: https://npm.pkg.github.com/
           scope: "@kencrocken"
-      - run: npm install
+      - run: npm ci
       - run: npm run test
       - run: npm run build
       - run: npm publish
