--- a/.eslintrc
+++ b/.eslintrc
@@ -27,5 +27,13 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "prettier/prettier": [
+      "error",
+      {},
+      {
+        "usePrettierrc": true
+      }
+    ]
   }
+
 }
