--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kencrocken/colorful-loader",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -51,7 +51,7 @@
     "lint-staged": "^15.2.5",
     "prettier": "^3.2.5",
     "storybook": "^8.1.5",
-    "styled-components": "^6.1.11",
+
     "typescript": "^5.4.5",
     "vite": "^5.2.12",
     "vite-plugin-dts": "^3.9.1",
@@ -59,7 +59,8 @@
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": ">= 6"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
