--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -17,9 +17,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: '16.x'
       - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
-          install_command: npm ci
+          install_command: npm i
           build_command: npm run build-storybook
           path: dist/storybook
