chore: Update deploy-gh-pages.yml workflow to include environment variables for github-pages deployment

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -20,4 +20,7 @@ jobs:
       - id: build-publish
         uses: bitovi/github-actions-react-to-github-pages@v1.2.4
         with:
+          install_command: npm ci
+          build_command: npm run build-storybook
           path: dist
+          checkout: false
