--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
       - id: build-publish
         uses: bitovi/github-actions-react-to-github-pages@v1.2.4
         with:
-          install_command: npm ci
+          install_command: npm i
           build_command: npm run build-storybook
           path: dist
           checkout: false
