--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           install_command: npm i
           build_command: npm run build-storybook
-          path: dist
+          path: storybook-static
