--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,25 +1,25 @@
-name: Build and Publish Storybook to GitHub Pages
+# name: Build and Publish Storybook to GitHub Pages
 
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
 
-jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.build-publish.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - id: build-publish
-        uses: bitovi/github-actions-react-to-github-pages@v1.2.4
-        with:
-          install_command: npm i
-          build_command: npm run build-storybook
-          path: storybook-static
+# jobs:
+#   deploy:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.build-publish.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - id: build-publish
+#         uses: bitovi/github-actions-react-to-github-pages@v1.2.4
+#         with:
+#           install_command: npm i
+#           build_command: npm run build-storybook
+#           path: storybook-static
