--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kencrocken/colorful-loader",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -20,9 +20,13 @@
     "prepare": "npm run build"
   },
   "keywords": [],
-  "author": "Ken Crocken",
+  "author": "Ken Crocken (https://kencrocken.github.io/)",
   "license": "ISC",
   "description": "A colorful loader component for React",
+  "homepage": "https://github.com/kencrocken/colorful-loader#readme",
+  "bugs": {
+    "url": "https://github.com/kencrocken/colorful-loader/issues"
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
     "@storybook/addon-essentials": "^8.1.5",
