chore: Update permissions in build-publish-deploy.yml workflow

--- a/.github/workflows/build-publish-deploy.yml
+++ b/.github/workflows/build-publish-deploy.yml
@@ -48,6 +48,11 @@ jobs:
       name: github-pages
       url: ${{ steps.build-publish.outputs.page_url }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      pages: write
+      id-token: write
     steps:
       - id: build-publish
         uses: bitovi/github-actions-react-to-github-pages@v1.2.4
